# tauri-plugin-spotlight

./: Cargo.toml
examples/react-app/: pnpm-lock.yaml
examples/react-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/react-app/src-tauri/src/: main.rs
src/: config.rs  lib.rs  spotlight_macos.rs  spotlight_others.rs
src/spotlight_macos/: mod.rs  panel.rs  spotlight.rs
