[package]
name = "tauri-plugin-spotlight"
version = "0.2.0"
edition = "2021"
rust-version = "1.57"
license = "MIT OR Apache-2.0"
keywords = ["tauri", "spotlight"]
description = "A Tauri plugin that provides a MacOS Spotlight-like search functionality for Tauri windows."
repository = "https://github.com/zzzze/tauri-plugin-spotlight"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1.7.2", features = ["global-shortcut-all"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
bitflags = "2.6.0"
thiserror = "1.0.63"

[target.'cfg(target_os = "macos")'.dependencies]
objc-foundation = "0.1.1"
objc_id = "0.1.1"
cocoa = { version = "0.26.0" }
objc =  { version = "0.2.7" }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v1" }
